--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-router/serve": "^7.7.1",
     "idb-keyval": "^6.2.2",
     "isbot": "^5.1.27",
+    "pdfjs-dist": "^5.3.93",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
