--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@react-router/node": "^7.7.1",
     "@react-router/serve": "^7.7.1",
+    "clsx": "^2.1.1",
     "idb-keyval": "^6.2.2",
     "isbot": "^5.1.27",
+    "lucide-react": "^0.539.0",
     "pdfjs-dist": "^5.3.93",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
-    "react-router": "^7.7.1"
+    "react-router": "^7.7.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@react-router/dev": "^7.7.1",
